RESOLVED FIXED244235
CSSStyleSheet should use weak pointers instead of raw pointers
https://bugs.webkit.org/show_bug.cgi?id=244235
Summary CSSStyleSheet should use weak pointers instead of raw pointers
Ryosuke Niwa
Reported 2022-08-22 23:55:22 PDT
Get rid of raw pointers from CSSStyleSheet.
Attachments
Ryosuke Niwa
Comment 1 2022-08-22 23:58:17 PDT
EWS
Comment 2 2022-08-23 12:47:30 PDT
Committed 253693@main (3d801a4534b9): <https://commits.webkit.org/253693@main> Reviewed commits have been landed. Closing PR #3565 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-23 12:48:16 PDT
Note You need to log in before you can comment on or make changes to this bug.