Bug 244235 - CSSStyleSheet should use weak pointers instead of raw pointers https://bugs.webkit.org/show_bug.cgi?id=244235

Reviewed by Darin Adler.

* Source/WebCore/css/CSSImportRule.h:
* Source/WebCore/css/CSSStyleSheet.cpp:
(WebCore::CSSStyleSheet::CSSStyleSheet):
(WebCore::CSSStyleSheet::ownerNode const):
(WebCore::CSSStyleSheet::ownerRule const):
(WebCore::CSSStyleSheet::parentStyleSheet const):
* Source/WebCore/css/CSSStyleSheet.h:

Canonical link: https://commits.webkit.org/253693@main