Source/WebCore/css/CSSImportRule.h
@@ -29,7 +29,7 @@ namespace WebCore {
 class MediaList;
 class StyleRuleImport;
 
-class CSSImportRule final : public CSSRule {
+class CSSImportRule final : public CSSRule, public CanMakeWeakPtr<CSSImportRule> {
 public:
     static Ref<CSSImportRule> create(StyleRuleImport& rule, CSSStyleSheet* sheet) { return adoptRef(*new CSSImportRule(rule, sheet)); }
 
