Source/WebCore/css/CSSStyleSheet.cpp
@@ -103,7 +103,7 @@ CSSStyleSheet::CSSStyleSheet(Ref<StyleSheetContents>&& contents, Node& ownerNode
     , m_isInlineStylesheet(isInlineStylesheet)
     , m_isOriginClean(isOriginClean)
     , m_styleScope(Style::Scope::forNode(ownerNode))
-    , m_ownerNode(&ownerNode)
+    , m_ownerNode(ownerNode)
     , m_startPosition(startPosition)
 {
     ASSERT(isAcceptableCSSStyleSheetParent(&ownerNode));
@@ -123,6 +123,11 @@ CSSStyleSheet::~CSSStyleSheet()
         m_mediaCSSOMWrapper->clearParentStyleSheet();
 
     m_contents->unregisterClient(this);
+}
+
+Node* CSSStyleSheet::ownerNode() const
+{
+    return m_ownerNode.get();
 }
 
 CSSStyleSheet::WhetherContentsWereClonedForMutation CSSStyleSheet::willMutateRules()
@@ -195,6 +200,11 @@ void CSSStyleSheet::didMutate()
 void CSSStyleSheet::clearOwnerNode()
 {
     m_ownerNode = nullptr;
+}
+
+CSSImportRule* CSSStyleSheet::ownerRule() const
+{
+    return m_ownerRule.get();
 }
 
 void CSSStyleSheet::reattachChildRuleCSSOMWrappers()
@@ -358,7 +368,8 @@ MediaList* CSSStyleSheet::media() const
 
 CSSStyleSheet* CSSStyleSheet::parentStyleSheet() const 
 { 
-    return m_ownerRule ? m_ownerRule->parentStyleSheet() : nullptr;
+    RefPtr ownerRule = m_ownerRule.get();
+    return ownerRule ? ownerRule->parentStyleSheet() : nullptr;
 }
 
 CSSStyleSheet& CSSStyleSheet::rootStyleSheet()
